landing page upd

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Interior Health Services - Landing Page</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body background= "pix.jpg">
     <section>
         <div class="container">
             <nav>
