--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Interior Health Services - Landing Page</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body background= "pix.jpg">
+<body>
     <section>
         <div class="container">
             <nav>
@@ -29,5 +29,4 @@
         </div>
     </section>
 </body>
-</html>
-~        
+</html>    
