--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
             </div>
         </div>
     </section>
+<section id="features">
+</section>
+<section id="about">
+    <div class="container">
+        <h2>About the Project</h2>
+        <p>This project was inspired by my passion for solving real-world problems through technology. It started as a simple idea during a hackathon event, and after months of collaboration and learning, it evolved into what you see today. This is also a Portfolio Project for <a href="https://www.holbertonschool.com">Holberton School</a>, showcasing our ability to create full-stack web applications.</p>
+        <p>The project began in January 2024 and was completed by March 2024. Throughout this time, we encountered numerous challenges, but the process helped us grow as developers and problem solvers.</p>
+        <h3>Meet the Team</h3>
+        <ul class="team-members">
+            <li>
+                <strong>John Doe</strong> - Lead Developer <br>
+                <a href="https://linkedin.com/in/johndoe">LinkedIn</a> | 
+                <a href="https://github.com/johndoe">GitHub</a> | 
+                <a href="https://twitter.com/johndoe">Twitter</a>
+            </li>
+            <li>
+                <strong>Jane Smith</strong> - Frontend Developer <br>
+                <a href="https://linkedin.com/in/janesmith">LinkedIn</a> | 
+                <a href="https://github.com/janesmith">GitHub</a> | 
+                <a href="https://twitter.com/janesmith">Twitter</a>
+            </li>
+        </ul>
+        <p>Check out the full project on <a href="https://github.com/your-repo">GitHub</a>.</p>
+    </div>
+</section>
+
 </body>
 </html>    
-~
+
