landing page upd

--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
 </section>
 <section id="about">
     <div class="container">
-        <h2>About the Project</h2>
-        <p>This project was inspired by my passion for solving real-world problems through technology. It started as a simple idea during a hackathon event, and after months of collaboration and learning, it evolved into what you see today. This is also a Portfolio Project for <a href="https://www.holbertonschool.com">Holberton School</a>, showcasing our ability to create full-stack web applications.</p>
-        <p>The project began in January 2024 and was completed by March 2024. Throughout this time, we encountered numerous challenges, but the process helped us grow as developers and problem solvers.</p>
-        <h3>Meet the Team</h3>
+        <h2>About the Interior Health Project</h2>
+        <p>This project was a brain child of dedicated programmers who saw the need to solve a key aspect of society, one which required immediate intervention. This is also a Portfolio Project for <a href="https://www.holbertonschool.com">Holberton School</a>, showcasing our ability to create full-stack web applications.</p>
+        <p>The project began in August 2024 and was completed by October 2024. Throughout this time, we encountered numerous challenges, but the process helped us grow as developers and problem solvers.</p>
+        <h3>Meet Our Team</h3>
         <ul class="team-members">
             <li>
-                <strong>John Doe</strong> - Lead Developer <br>
-                <a href="https://linkedin.com/in/johndoe">LinkedIn</a> | 
-                <a href="https://github.com/johndoe">GitHub</a> | 
-                <a href="https://twitter.com/johndoe">Twitter</a>
+                <strong>Benjamin Alfayo Otieno</strong> - Full-Stack Developer <br>
+                <a href="https://linkedin.com/in/benjamin_alfayo1">LinkedIn</a> | 
+                <a href="https://github.com/jujutsualfayo">GitHub</a> | 
+                <a href="https://twitter.com/benjaminalpha">Twitter</a>
             </li>
             <li>
-                <strong>Jane Smith</strong> - Frontend Developer <br>
-                <a href="https://linkedin.com/in/janesmith">LinkedIn</a> | 
-                <a href="https://github.com/janesmith">GitHub</a> | 
-                <a href="https://twitter.com/janesmith">Twitter</a>
+                <strong>Oscar Obado Ochieng</strong> - Full-stack  Developer <br>
+                <a href="https://linkedin.com/in/oscarobado1">LinkedIn</a> | 
+                <a href="https://github.com/posei-d">GitHub</a> | 
+                <a href="https://twitter.com/obado oscar">Twitter</a>
             </li>
         </ul>
-        <p>Check out the full project on <a href="https://github.com/your-repo">GitHub</a>.</p>
+        <p>Check out the full project on <a href="https://github.com/interiorhealth_v1">GitHub</a>.</p>
     </div>
 </section>
 
