--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@
         <p>Check out the full project on <a href="https://github.com/interiorhealth_v1">GitHub</a>.</p>
     </div>
 </section>
+<section id="products">
+    <div class="container">
+        <h2>Available Products</h2>
+        <div id="product-list"></div>
+    </div>
+</section>
+
+<section id="checkout">
+    <div class="container">
+        <h2>Your Cart</h2>
+        <div id="cart-list"></div>
+        <p id="total">Total: $0.00</p>
+    </div>
+</section>
+
+<script src="app.js"></script>
+
 
 </body>
 </html>    
