--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-    <meta name="description" content="Interior Health services providing inclusive health care for human beings in the interiormost places."> 
+    <meta name="description" content="Interior Health services providing inclusive health care for remote individuals."> 
 
     <title>Interior Health Services - Landing Page</title> 
 
