--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,11 @@
 
     <title>Contact Us - Interior Health Services</title> 
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}"> 
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="{{ url_for('static', filename='app.js') }}"></script> 
+
+    <script src="app.js"></script>
+
 
 </head> 
 
