--- a/index.html
+++ b/index.html
@@ -1,77 +1,69 @@
-<!DOCTYPE html> 
-
-<html lang="en"> 
-
-<head> 
-
-    <meta charset="utf-8"> 
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
-    <meta name="description" content="Interior Health services providing inclusive health care for remote individuals."> 
-
-    <title>Interior Health Services - Landing Page</title> 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Interior Health services providing inclusive health care for remote individuals.">
+    <title>Interior Health Services</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="app.js"></script>
+</head>
+<body>
 
+    <!-- About Us Section -->
+    <section id="about">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>We at Interior Health services aim to provide inclusive healthcare for individuals in remote areas. Our mission is to safeguard lives and uphold dignity through accessible healthcare solutions.</p>
+        </div>
+    </section>
+
+    <!-- Donate Section -->
+    <section id="donate">
+        <div class="container">
+            <h2>Donate</h2>
+            <p>Your generous donation will help us continue our mission of providing healthcare to underserved communities.</p>
+            <a href="donate.html" class="btn">Donate Now</a>
+        </div>
+    </section>
+
+    <!-- Contacts Section -->
+    <section id="contacts">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Have questions or need more information? Reach out to us through our <a href="contacts.html">Contact Page</a>.</p>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <p>Explore the projects that we are working on to improve healthcare delivery in remote regions. <a href="projects.html">View Projects</a>.</p>
+        </div>
+    </section>
+
+    <!-- Home Section -->
+    <section id="home">
+        <div class="container">
+            <nav>
+                <h1>Interior Health Services</h1>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#donate">Donate</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                </ul>
+            </nav>
+            <div class="article">
+                <h2>Welcome to Interior Health Services</h2>
+                <p>Providing inclusive healthcare to individuals living in remote regions. Our aim is to make healthcare accessible to all.</p>
+                <a href="download.pdf" class="btn">Download Now</a>
+            </div>
+        </div>
+    </section>
 
     <script src="app.js"></script>
-
-
-</head> 
-
-<body> 
-
-    <section> 
-
-        <div class="container"> 
-
-            <nav> 
-
-                <h1>Interior Health Services</h1> 
-
-                <ul> 
-
-                    <li><a href="{{ url_for('landing_page') }}">Home</a></li> 
-
-                </ul> 
-
-            </nav> 
-
-            <div class="article"> 
-
-                <h2>Welcome to Interior Health</h2> 
-
-                <p>We at Interior Health services aim to provide an inclusive health care package designed for individuals living in the most remote areas of the Earth. <br> 
-
-                Safeguarding life and upholding dignity is our goal.</p> 
-
-                <a href="download.pdf" class="btn">Download Brochure</a> 
-
-            </div> 
-
-        </div> 
-
-    </section> 
-
-  
-
-    <section id="features"> 
-
-        <div class="container"> 
-
-            <h2>Our Services</h2> 
-
-            <p>At Interior Health, we provide affordable and accessible health care products tailored for rural and remote communities. Stay tuned for more information about our services and products!</p> 
-
-        </div> 
-
-    </section> 
-
-  
-
-    <script src="app.js"></script> 
-
-</body> 
-
-</html> 
+</body>
+</html>
